kubernetes/prod/weather-prod-api-nodeport.yml
---
kind: Service
apiVersion: v1
metadata:
    name: weather-app-service-nodeport
spec:
    type: NodePort
    selector:
        app: weather-app-flask
    ports:
        - port: 5000
          targetPort: 5000



# notes:
# The metadata name should be unique amoung services; needs to be different than the ClusterIP service 
# The app in selector needs to be the same as the app label in the deployment
