kubernetes/prod/weather-prod-db-service.yml
# redis service
---
apiVersion: v1
kind: Service
metadata:
  name: weather-app-redis-service
spec:
  type: ClusterIP
  selector:
    app: weather-app-redis
  ports:
  - name: weather-app
    port: 6379
    targetPort: 6379
