kubernetes/prod/weather-prod-api-ingress.yml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: weather-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "danisan.coe332.tacc.cloud"
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: weather-app-service-nodeport
              port:
                  number: 31863


#notes:
#the name for the metadata should be unique (it is)
#the host should have the user's username
#the number should be the port number when you apply -f the nodeport yaml file. it will be unique 
#the HOST allows public access to the API. you can use curl command to curl on local laptop. curl danisan.coe332.tacc.cloud/help
